packages/components/src/modal/Dialog.module.css
.modal {
  font-family: var(--midas-typography-font-family);
  position: fixed;
  max-width: 75%;
  min-width: 300px;
  max-height: 90vh;
  overflow-y: auto;
  background-color: var(--midas-background-base);
  color: var(--midas-text-primary);
  border: none;
  padding: 0;
  margin: auto;

  &[data-entering] {
    /* animating in the modal causes popovers to miscalculate their size and positions */
    animation: none;
  }

  @media (forced-colors: active) {
    outline: 2px solid;
  }
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--midas-z-index-modal);
  width: 100vw;
  background: rgba(45 0 0 / 30%);
  display: flex;
  align-items: center;
  justify-content: center;

  /* RAC passes this variable via the style prop, making it available during runtime only */
  /* stylelint-disable-next-line csstools/value-no-unknown-custom-properties */
  height: var(--visual-viewport-height);

  &[data-entering] {
    animation: modal-fade var(--midas-transition-duration-quick)
      var(--midas-transition-timing-ease-out);
  }

  &[data-exiting] {
    animation: modal-fade var(--midas-transition-duration-quick)
      var(--midas-transition-timing-ease-in) reverse;
  }
}

.modalHeader {
  min-height: var(--midas-size-control);
  background-color: var(--midas-layer-01-base);
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  position: sticky;
  top: 0;
  z-index: var(--midas-z-index-above);
}

.modalTitle {
  flex-grow: 1;
  place-self: center;
  padding-left: 1rem;
}

.modalBody {
  position: relative;
  padding: 1rem 2rem 2rem;
  font-family: var(--midas-typography-font-family);
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

@keyframes modal-fade {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes modal-zoom {
  from {
    transform: scale(0.8);
  }

  to {
    transform: scale(1);
  }
}

@media (prefers-reduced-motion) {
  .overlay[data-entering],
  .overlay[data-exiting] {
    animation: none;
  }
}

